Fixed contact not showing on small screens

--- a/src/stylesheets/mobile.css
+++ b/src/stylesheets/mobile.css
@@ -11,6 +11,10 @@ html {
 	-webkit-text-size-adjust: none;
 }
 
+#oregon {
+	display: none;
+}
+
 #drop-content {
 	min-width: 100px;
 }
